--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/react": "^1.2.12",
     "@clerk/clerk-expo": "^2.11.8",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "ai": "^4.3.16",
     "axios": "^1.9.0",
     "convex": "^1.24.1",
     "expo": "~53.0.9",
@@ -50,7 +53,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
