--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "use-debounce": "^10.0.4",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
